<resources>
    <string name="app_name">Proyecto PDM 0120</string>

    <!--- Textos para textview -->
    <string name="text_hora">Hora:</string>
    <string name="text_salon">Salón:</string>
    <string name="text_dias_cursan">Días que se cursaran:</string>
    <string name="text_materia">Materia:</string>
    <string name="text_uv">UV:</string>
    <string name="text_horario_inicio">Hora de inicio:</string>
    <string name="text_horario_fin">Hora de fin:</string>

    <string name="text_apellido">Apellido</string>
    <string name="text_email">Email</string>
    <string name="text_uni">Universidad</string>
    <string name="text_carrera">Carrera</string>

    <string name="text_evaluacion">Evaluación:</string>
    <string name="text_porcentaje">Porcentaje:</string>
    <string name="text_fecha">Fecha:</string>

    <!--- Textos para botones -->
    <string name="text_btn_add">Añadir</string>
    <string name="text_btn_save">Guardar</string>
    <string name="text_btn_update">Actualizar</string>
    <string name="text_btn_cancel">Cancelar</string>

    <string name="text_btn_sing_in">Ingresar</string>
    <string name="text_btn_sing_up">Registrarse</string>
    <string name="text_btn_profile">Perfil</string>
    <string name="text_btn_pensum">Pensum</string>
    <string name="text_btn_record">Historial</string>
    <string name="text_btn_weekly_schedule">Horario de clase</string>
    <string name="text_btn_schedule">Agenda</string>
    <string name="text_btn_grades_record">Historial de notas</string>

    <!--- Textos para hints -->
    <string name="text_hint_nombre">Nombre</string>
    <string name="text_hint_apellido">Apellido</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_pass">Contraseña</string>
    <string name="text_hint_pass_repeat">Repita la contraseña</string>
    <string name="text_hint_uni">Universidad</string>
    <string name="text_hint_carrera">Carrera</string>

    <string name="text_hint_pass_actual">Contraseña actual</string>
    <string name="text_hint_pass_nueva">Contraseña nueva</string>
    <string name="text_hint_pass_confirm">Confirmar contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->

</resources>
